update form add data

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
     - images/edit.png
     - images/delete.png
     - images/location.png
+    - images/foto.png
     # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
