--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.9
   geolocator: ^9.0.2
+  firebase_core: ^2.14.0
+  firebase_storage: ^11.2.3
+  cloud_firestore: ^4.8.1
 
 dev_dependencies:
   flutter_test:
